--- a/main.html
+++ b/main.html
@@ -10,6 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<img src="https://tse4.mm.bing.net/th?id=OIP.zWDKu-OUPxkyHizMgZf3ogHaFj&pid=Api&P=0&h=180" alt="Elephant is a largest animal in a the forest." height="300px">
 
 </body>
 
